force-app/main/default/objects/OTP__c/OTP__c.object-meta.xml
<CustomObject>
    <label>OTP</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>OTP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTPs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>