force-app/main/default/objects/OTP__c/fields/Channel_Partner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Lookup</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <errorMessage>Please select an active Channel Partner</errorMessage>
        <filterItems>
            <field>Broker__c.Deactivated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.OTP_Generate_For__c</field>
            <operation>equals</operation>
            <value>Temp Channel Partner</value>
        </filterItems>
        <filterItems>
            <field>Broker__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Temp Channel Partner</value>
        </filterItems>
        <filterItems>
            <field>$Source.OTP_Generate_For__c</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <filterItems>
            <field>Broker__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>OTPs</relationshipLabel>
    <relationshipName>OTPs</relationshipName>
    <type>Lookup</type>
</CustomField>