force-app/main/default/objects/OTP__c/fields/Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name__c</fullName>
    <formula>IF(
	ISPICKVAL( OTP_Generate_For__c ,&apos;Channel Partner&apos;),
	&apos;CP Name: &apos; + Prospect__r.Channel_Partner__r.Name,
	IF(
		ISPICKVAL( OTP_Generate_For__c ,&apos;Temp Channel Partner&apos;),
		&apos;CP Name: &apos; + Prospect__r.Temp_Channel_Partner__r.Name,
		&apos; &apos;
	)
)

/*IF(ISPICKVAL( OTP_Generate_For__c ,&apos;Channel Partner&apos;),
&apos;Channel Partner Name:&apos; + Prospect__r.Channel_Partner__r.Name,&apos; &apos; )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Name</label>
    <type>Text</type>
</CustomField>