force-app/main/default/objects/OTP__c/fields/Customer_reference_Booked_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference_Booked_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer reference Booked Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>OTPs</relationshipLabel>
    <relationshipName>OTPs</relationshipName>
    <type>Lookup</type>
</CustomField>