force-app/main/default/objects/OTP__c/fields/Customer_Reference_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Reference Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTPs (Customer Reference Lookup)</relationshipLabel>
    <relationshipName>OTPs1</relationshipName>
    <type>Lookup</type>
</CustomField>