force-app/main/default/objects/OTP__c/fields/Customer_reference_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference_SAP_Code__c</fullName>
    <label>Customer reference SAP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>