force-app/main/default/objects/OTP__c/fields/Customer_Site_Visit_On__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Visit_On__c</fullName>
    <label>Customer Site Visit On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>