force-app/main/default/objects/OTP__c/fields/Digital_Form_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Digital_Form_Customer_Number__c</fullName>
    <label>Digital Form Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>