force-app/main/default/objects/OTP__c/fields/Direct_Lead_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lead_Mobile_Number__c</fullName>
    <label>Direct Lead Mobile Number</label>
    <type>Phone</type>
</CustomField>