force-app/main/default/objects/OTP__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <formula>IF(OR( ISPICKVAL( OTP_Generate_For__c , &apos;Channel partner&apos;) , ISPICKVAL(OTP_Generate_For__c, &apos;Corporate&apos;) ) , &apos;&apos;, &apos;Directions&apos; + Project__r.Site_Address_Map_Link__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direction</label>
    <type>Text</type>
</CustomField>