force-app/main/default/objects/OTP__c/fields/Generated_Digital_Form_OTP__c.field-meta.xml
<CustomField>
    <fullName>Generated_Digital_Form_OTP__c</fullName>
    <label>Generated Digital Form OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>