force-app/main/default/objects/OTP__c/fields/OTP_Generate_For__c.field-meta.xml
<CustomField>
    <fullName>OTP_Generate_For__c</fullName>
    <label>OTP Generate For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Emp / Mgmt Reference</fullName>
            </value>
            <value>
                <fullName>Individual Calling</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>PreSales</fullName>
            </value>
            <value>
                <fullName>R Circle Caller</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Temp Channel Partner</fullName>
            </value>
            <value>
                <fullName>Lockated Customer Creation</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>