force-app/main/default/objects/OTP__c/fields/OTP_Generated_on__c.field-meta.xml
<CustomField>
    <fullName>OTP_Generated_on__c</fullName>
    <label>OTP Generated on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>