force-app/main/default/objects/OTP__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>OTPs</relationshipLabel>
    <relationshipName>OTPs</relationshipName>
    <type>Lookup</type>
</CustomField>