force-app/main/default/objects/OTP__c/fields/Prospect_Lead__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lead__c</fullName>
    <formula>IF(Prospect__c &lt;&gt; null , CASESAFEID(Prospect__r.Lead__c) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Lead</label>
    <type>Text</type>
</CustomField>