force-app/main/default/objects/OTP__c/fields/Referral_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sub_Source__c</fullName>
    <label>Referral Sub Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>