force-app/main/default/objects/OTP__c/fields/Retention_Closing_Head_Name__c.field-meta.xml
<CustomField>
    <fullName>Retention_Closing_Head_Name__c</fullName>
    <formula>Prospect__r.Retention_Closing_Head_Name__r.FirstName + &apos; &apos; + Prospect__r.Retention_Closing_Head_Name__r.LastName</formula>
    <label>Retention Closing Head Name</label>
    <type>Text</type>
</CustomField>