force-app/main/default/objects/OTP__c/fields/Retention_Customer_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Retention_Customer_SAP_Code__c</fullName>
    <formula>Prospect__r.Retention_Customer_SAP_Code__c</formula>
    <label>Retention Customer SAP Code</label>
    <type>Text</type>
</CustomField>