force-app/main/default/objects/OTP__c/fields/Retention_Presales_User__c.field-meta.xml
<CustomField>
    <fullName>Retention_Presales_User__c</fullName>
    <formula>Prospect__r.Retention_Presales_User__r.FirstName + &apos; &apos; + Prospect__r.Retention_Presales_User__r.LastName</formula>
    <label>Retention Presales User</label>
    <type>Text</type>
</CustomField>