force-app/main/default/objects/OTP__c/fields/Retention_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Retention_Sales_Manager__c</fullName>
    <formula>Prospect__r.Retention_Sales_Manager__r.FirstName + &apos; &apos; + Prospect__r.Retention_Sales_Manager__r.LastName</formula>
    <label>Retention Sales Manager</label>
    <type>Text</type>
</CustomField>