force-app/main/default/objects/OTP__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <label>Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Aakash Tripathi</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Gaikwad</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Mhaskar</fullName>
            </value>
            <value>
                <fullName>A Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Adarsh Padney</fullName>
            </value>
            <value>
                <fullName>A Aditya Sankpal</fullName>
            </value>
            <value>
                <fullName>A Akash Malik</fullName>
            </value>
            <value>
                <fullName>A Akash Singh</fullName>
            </value>
            <value>
                <fullName>A Anam Khan</fullName>
            </value>
            <value>
                <fullName>A Arjun K. Relwani</fullName>
            </value>
            <value>
                <fullName>A Ashish Bodwani</fullName>
            </value>
            <value>
                <fullName>A Ashok Rathod</fullName>
            </value>
            <value>
                <fullName>A Asim Master</fullName>
            </value>
            <value>
                <fullName>A Balivada Pradeep</fullName>
            </value>
            <value>
                <fullName>Abhay Ghogare</fullName>
            </value>
            <value>
                <fullName>Abhay Jaiswal</fullName>
            </value>
            <value>
                <fullName>Abhijit Kargirwar</fullName>
            </value>
            <value>
                <fullName>Abhinandan D Souza</fullName>
            </value>
            <value>
                <fullName>Abhinay Edake</fullName>
            </value>
            <value>
                <fullName>Abhishek Dashehariya</fullName>
            </value>
            <value>
                <fullName>Abhishek Kalelkar</fullName>
            </value>
            <value>
                <fullName>Abhishek Sonawane</fullName>
            </value>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
            <value>
                <fullName>A Darshan Singh</fullName>
            </value>
            <value>
                <fullName>Aditya Ghosalkar</fullName>
            </value>
            <value>
                <fullName>A Farooque Shaikh</fullName>
            </value>
            <value>
                <fullName>A Hitendra Zala</fullName>
            </value>
            <value>
                <fullName>A Indervir Singh</fullName>
            </value>
            <value>
                <fullName>Ajay Sharma</fullName>
            </value>
            <value>
                <fullName>Ajit Sharma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>