force-app/main/default/objects/OTP__c/fields/User_Info__c.field-meta.xml
<CustomField>
    <fullName>User_Info__c</fullName>
    <label>User Info</label>
    <type>TextArea</type>
</CustomField>