force-app/main/default/objects/OTP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prospect__c</columns>
    <columns>OTP_Generate_For__c</columns>
    <columns>OTP_Expired__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>