force-app/main/default/objects/OTP__c/listViews/OTP_test_view.listView-meta.xml
<ListView>
    <fullName>OTP_test_view</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OTP_Generate_For__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>OTP - test view</label>
</ListView>